# study

./: .gitignore  README.md
antennas/: README.md  antenna_array.ipynb  broadband_dipoles.ipynb  dipole_antenna.ipynb  figure_of_merits.ipynb  loop_antenna.ipynb  patch_antenna.ipynb  traveling_wave_antennas.ipynb
cpp/: .gitignore  libs  notes
cpp/basics/hello/: Makefile  hello.cpp
cpp/fftw/: ex2.cpp  note
cpp/fftw/basic_test/source/: CMakeLists.txt  main.cpp
cpp/imgui_example/: README.md
cpp/imgui_example/src/: Makefile
cpp/implot_example/: README.md
cpp/learncpp/: Makefile  notes
cpp/sandbox/TcpUtils/class/includes/: TcpSocket.h
cpp/sandbox/TcpUtils/class/source/: CMakeLists.txt  TcpSocket.cpp  test.cpp
cpp/sandbox/TcpUtils/source/: test.cpp
cpp/sandbox/class_test/includes/: test_class.h
cpp/sandbox/class_test/source/: CMakeLists.txt  main.cpp  test_class.cpp
cpp/sandbox/cmake_basics/: README.md
cpp/sandbox/cmake_basics/source/: CMakeLists.txt  main.cpp
cpp/sandbox/cmake_libs/lib_create/includes/: adder.h
cpp/sandbox/cmake_libs/lib_create/source/: CMakeLists.txt  adder.cpp
cpp/sandbox/cmake_libs/lib_usage/source/: CMakeLists.txt  main.cpp
cpp/sandbox/cmake_test/includes/: lib_test.h
cpp/sandbox/cmake_test/source/: CMakeLists.txt  lib_test.cpp  main.cpp
cpp/sandbox/logger_test/include/: spdlog
cpp/sandbox/logger_test/source/: CMakeLists.txt  main.cpp
cpp/sandbox/scpi_server/includes/: SCPI_server.h
cpp/sandbox/scpi_server/old/includes/: SCPI_server.h
cpp/sandbox/scpi_server/old/source/: CMakeLists.txt  SCPI_server.cpp  test.cpp
cpp/sandbox/scpi_server/source/: SCPI_server.cpp  test.cpp
cpp/sandbox/scpi_server_v2/includes/: SCPI_server.h
cpp/sandbox/scpi_server_v2/source/: CMakeLists.txt  SCPI_server.cpp  test.cpp
cpp/sandbox/tcp_correlator/: README.md
cpp/sandbox/tcp_correlator/raw/source/: CMakeLists.txt  main.cpp
cpp/sandbox/tcp_correlator/raw_cli/includes/: correlator.h
cpp/sandbox/tcp_correlator/raw_cli/source/: CMakeLists.txt  correlator.cpp  main.cpp
cpp/sandbox/tcp_correlator/scpi_interface/includes/: SCPI_server.h
cpp/sandbox/tcp_correlator/scpi_interface/source/: SCPI_server.cpp  main.cpp
cpp/sandbox/tcp_fft/: README.md
cpp/sandbox/tcp_fft/includes/: TcpFFT.h
cpp/sandbox/tcp_fft/source/: CMakeLists.txt  TcpFFT.cpp  main.cpp
cpp/sandbox/tcp_server_multi_client/back/includes/: multi_client_server.h
cpp/sandbox/tcp_server_multi_client/back/source/: CMakeLists.txt  multi_client_server.cpp  test.cpp
cpp/sandbox/tcp_server_multi_client/includes/: TcpServer.h
cpp/sandbox/tcp_server_multi_client/source/: CMakeLists.txt  TcpServer.cpp  test.cpp
cpp/sockets/: notes
cpp/sockets/simple_test/: Makefile  client.cpp  server.cpp
cpp/sockets/tcp_class/: TcpSocket.cpp  TcpSocket.hpp  TcpSocket_old
fft/: dft.ipynb
gui/: matplot_embed_qt_example.py  matplot_embed_qt_utils.py
interferometry/: interferometry_1.ipynb
links/: README.md
misc/: lissajous.ipynb  lissajous_anim.py
optics/: PO.ipynb  far_fields_examples.ipynb  holography_data.ipynb
optics/.ipynb_checkpoints/: far_fields_examples-checkpoint.ipynb
optics/gaussian_beam/: gaussian_beam.ipynb
optics/po/: cassegrain.py  cassegrain_gauss_feed.py  example.py  example_kirchhoff.py  example_po.py  fk_paraboloid.py  gauss_beam_ex.py  geometry.py  kirchhoff_fresnel.py  kirchhoff_fresnel_2.py  physical_optics.py  sources.py  test_po.py
rust/tutorials/guess/: .gitignore
rust/tutorials/guess/src/: main.rs
rust/tutorials/hello/: main.rs
statistics/: notebook.py
